init refactory map generator